[tool.poetry]
name = "projecteulersolutions"
version = "0.1.0"
description = "Solutions of Project Euler"
authors = ["Leo <cli4168@hillstonenet.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
